# FRCScouter

./: .gitignore  2020GrandForks.json  Cargo.toml  Dockerfile  README.md  Rocket.toml  ahahh.md
.github/workflows/: rust.yml
docs/: api-core.md  build-from-source.md  contributing.md  index.md  json-page.md  run-local.md
plugins/base/: buildapp.json  config.json  confirm_match.json  create.json  games.json  homepage.json  load.json  plug_basic.json  plug_basic_new_element.json  plug_basic_new_element_button.json  plug_basic_new_element_text.json  plug_basic_new_page.json  plug_basic_page.json
plugins/test/: config.json  entry.json  game_2020.json  load.json
src/: Rocket.toml  admin.html  backend.rs  data.rs  index.html  main.rs  plugins.rs
src/pages/: buildapp.json  create.json  homepage.json
src/server/: console.rs  data.rs  mod.rs  packet.rs  ping.rs
src/server/network/: decode.rs  encode.rs  mod.rs  packet.rs  stream.rs
src/server/network/roboconnect/: mod.rs
src/server/stream/: core.rs  decode.rs  encode.rs  mod.rs
src/server/stream/roboconnect/: mod.rs
static/: admin  index.html  main.css
static/js/: admin.js  frontpage.js  network.js  page.js  pluginmaker.js  scouter.js
static/js/dataviewer/: base.js  canvas.js
static/js/network/: debug.js  decode.js  encode.js  stream.js
static/js/scouter/: main.js
static/js/scouter/2019/: init.js  sandstorm.js  teleop.js
static/js/scouter/2020/: autonomous.js  climb.js  init.js  post.js  teleop.js  test.js
