[package]
name = "FRCScouter"
version = "0.1.1"
authors = ["thisjaiden", "henryscheible", "https://www.twitch.tv/x03t/", "team2239"]
edition = "2018"

[dependencies]
ws = "0.9.1"
rocket = "0.4.4"
json = "0.12.4"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "serve"]
