[package]
name = "FRCScouter"
version = "0.1.1"
authors = ["jadedgem", "henryscheible", "https://www.twitch.tv/x03t/", "team2239"]
edition = "2018"

[dependencies]
ws = "0.9.1"
json = "0.12.4"
chrono = "0.4.15"
rand = "0.7.3"
actix-web = "3.0.2"
actix = "0.10.0"
actix-files = "0.3.0"
env_logger = "0.7.1"
futures = "0.3.5"
bytes = "0.5.6"
actix-rt = "1.1.1"
actix-web-actors = "3.0.0"
