[package]
name = "FRCScouter"
version = "0.1.1"
authors = ["jadedgem", "henryscheible", "https://www.twitch.tv/x03t/", "team2239"]
edition = "2018"

[dependencies]
ws = "0.9.1"
json = "0.12.4"
chrono = "0.4.19"
actix-web = "3.1.0"
actix = "0.10.0"
actix-files = "0.4.0"
env_logger = "0.8.1"
actix-rt = "1.1.1"
